[package]
name = "rainy"
version = "0.1.0"
authors = ["elpinal"]
edition = "2018"

[dependencies]
env_logger = "0.6.0"
failure = "0.1.3"
log = "0.4"
structopt = "0.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
